// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`element 1`] = `
  () => <div className="element_5ae">Hello World</div>;
  css(\`
  	.element_5ae {
  		color: red;
  	}
  \`);
`;

exports[`hoisted 1`] = `
  const App = () => (
    <div className="App_8dv">Hello World</div>
  );
  
  css(\`
  	.App_8dv {
  		color: red;
  	}
  \`);
`;

exports[`nested element 1`] = `
  () => (
    <div>
      <div />
      <div className="bar_l7l">
        <div className="baz_5fk">Hello World</div>
      </div>
    </div>
  );
  
  css(\`
  	.bar_l7l {
  		color: red;
  	}
  	.baz_5fk {
  		color: blue;
  	}
  \`);
`;
